@@ -7,6 +7,7 @@ fail2ban-server
 fail2ban-testcases
 fail2ban-regex
 client/configreader.py
+client/configparserinc.py
 client/jailreader.py
 client/fail2banreader.py
 client/jailsreader.py
@@ -60,6 +61,7 @@ common/__init__.py
 common/version.py
 common/protocol.py
 config/jail.conf
+config/filter.d/common.conf
 config/filter.d/apache-auth.conf
 config/filter.d/apache-badbots.conf
 config/filter.d/apache-noscript.conf
